--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,13 @@
 
 # tf variable files, may include sensitive data
 *.tfvars
+
+# Ignore CLI configurations files
+.terraformrc
+terraform.rc
+
+# Ignore Mac/OSX system file, with the folder metadata
+.DS_Store
+
+# Ignore crash logs
+crash.log
